# intercosmic_empire_core

./: Cargo.toml  README.md  generate_interop.cmd  publish_oculus.cmd
.fleet/: run.json
bindings/csharp/: Interop.cs  Interop.g.cs
src/: app.rs  ffi.rs  ffi_ext.rs  ffi_models.rs  lib.rs  obstacle.rs  old_ffi.rs  old_ffi_ext.rs  old_ffi_models.rs  steering.rs
src/app/: game.rs  guard.rs  utils.rs
src/app/game/: battle.rs  core.rs  game_variants.rs
src/app/game/battle/: active_battle.rs  ai_agents.rs  battle_view_model.rs  constants.rs  entities.rs  services.rs  traits.rs  view_model.rs
src/app/game/core/: battle_settings.rs  faction.rs  spaceship_info.rs  stellar_system.rs  uniqueness_registry.rs
src/app/game/game_variants/: playground.rs  sandbox.rs
src/app/utils/: delta_time.rs  guard.rs  interop_logger.rs  quat_extra.rs  random.rs  repr_test.rs  struct_vec.rs  translation.rs
src/ffi/: utils.rs
src/game/: game_context.rs  mod.rs
src/game/battle/: battle_context.rs  ecs_context.rs  mod.rs  views.rs
src/game/battle/components/: mod.rs  spaceship.rs  translation.rs
src/game/battle/factories/: spaceship_factory.rs
src/game/battle/models/: battle_parameters.rs  battle_state.rs  battle_view_model.rs  fleet.rs  mod.rs  route.rs  warp_gate.rs
src/game/battle/utils/: mod.rs  (+3 more)
src/game/utils/: interop_logger.rs
src/old/: game_context.rs  mod.rs  utils.rs
src/old/battle/: battle_context.rs  battle_params.rs  ecs_context.rs  views.rs
src/old/utils/: interop_logger.rs
tests/: bindings.rs  ffi_interop.rs  route.rs  spaceships.rs  stellar_system.rs
(+68 files in other folders)
