[package]
name = "intercosmic_empire_core"
version = "0.1.0"
edition = "2021"
authors = ["Aleksandr Kugushev kugushew@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "intercosmic_empire"
crate-type = ["cdylib", "rlib"]

[dependencies]
glam = "0.24.0"
interoptopus = "0.14.15"
bevy_ecs = "0.10.1"
base64 = "0.21.2"

[dev-dependencies]
interoptopus_backend_csharp = "0.14.15"
